apps/matrix/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-synapse
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.oisd.io`)
      kind: Rule
      services:
        - name: matrix-synapse
          namespace: matrix
          port: 8008
          kind: Service
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
